--- a/Galere.html
+++ b/Galere.html
@@ -45,7 +45,7 @@
 
         <!--tombol Kembali-->
         <div class="view-more-container">
-            <p><a href="tes2.html" class="view-more-btn">Kembali</a></p>
+            <p><a href="index.html" class="view-more-btn">Kembali</a></p>
         </div>
 
         <!-- Lightbox -->
@@ -122,5 +122,6 @@
             });
         </script>
 </body>
+
 
 </html>
