Update Proyek dan karya.html

--- a/Proyek dan karya.html
+++ b/Proyek dan karya.html
@@ -100,8 +100,9 @@
         </div>
          <!--tombol balik-->
             <div class="view-more-container">
-                <p><a href="tes2.html" class="view-more-btn">Kembali</a></p>
+                <p><a href="index.html" class="view-more-btn">Kembali</a></p>
             </div>
 </body>
+
 
 </html>
