--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                 <div class="timeline-item">
-                    <h3>SMP Pondeok Pesantren Tahfizul-Quran Al-Junaidiyah Biru</h3>
+                    <h3>SMP Pondok Pesantren Tahfizul-Quran Al-Junaidiyah Biru</h3>
                     <p class="timeline-year">Sekolah Menengah Pertama</p>
                     <p>Menyelesaikan pendidikan dengan catatan yang baik dan telah menyelesaikan sekaligus mewisudahkan
                         hafalan 10 Juz</p>
@@ -284,3 +284,4 @@
 
 
 </html>
+
