--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="logo">MAN Insan Cendekia Gowa</div>
             <ul>
                 <li><a href="#home" title="BERANDA">Beranda</a></li>
-                <li><a href="#about" title="sok asik LU">Tentang</a></li>
-                <li><a href="#education">Pendidikan</a></li>
-                <li><a href="#projects">Proyek</a></li>
-                <li><a href="#gallery">Galeri</a></li>
-                <li><a href="#contact">Kontak</a></li>
+                <li><a href="#about" title="Tentang">Tentang</a></li>
+                <li><a href="#education" title="Pendidikan">Pendidikan</a></li>
+                <li><a href="#projects" title="Proyek">Proyek</a></li>
+                <li><a href="#gallery" title="proyek">Galeri</a></li>
+                <li><a href="#contact" title="proyek">Kontak</a></li>
             </ul>
         </nav>
     </header>
@@ -284,4 +284,5 @@
 
 
 </html>
+
 
